--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -197,7 +197,7 @@
                                          </div>
                                      </div>
                                  </div>
-                                 <div class="projects-swiper-slide__wrapper">
+                                 <div class="projects-swiper-slide__wrapper projects-swiper-slide__wrapper-a">
                                      <img class="slide-up-and-scale-in-view" src="../assets/images/069_DSCF4268-HDR.png" alt="">
                                  </div>
                              </div>
@@ -290,11 +290,13 @@
                             </div>
                         </div>
                         <div class="supervisors__content-main">
-                            <div class="supervisors__content-first">
-                                <img src="../assets/images/sup1.png" alt="">
-                            </div>
-                            <div class="supervisors__content-second">
-                                <img src="../assets/images/sup2.png" alt="">
+                            <div class="supervisors__content-main--imgs">
+                                <div class="supervisors__content-first">
+                                    <img class="scale-into-view" src="../assets/images/sup1.png" alt="">
+                                </div>
+                                <div class="supervisors__content-second">
+                                    <img class="scale-into-view" src="../assets/images/sup2.png" alt="">
+                                </div>
                             </div>
                             <div class="supervisors__content-text">
                                 <div class="supervisors__content-text-1 text">
@@ -388,7 +390,7 @@
                                 </div>
                             </div>
                             <div class="services-list">
-                                <div class="services-list__item">
+                                <div class="services-list__item mb-4">
                                     <div class="services-list__item-animation">
                                         <div class="services-list__img-wrapper">
                                             <img src="../assets/images/service1.png" alt="">
@@ -397,7 +399,7 @@
                                         <div class="services-list__description">Комплексная услуга по дизайну интерьера</div>
                                     </div>
                                 </div>
-                                <div class="services-list__item">
+                                <div class="services-list__item mb-4">
                                     <div class="services-list__item-animation">
                                         <div class="services-list__img-wrapper">
                                             <img src="../assets/images/service2.png" alt="">
@@ -430,7 +432,7 @@
                 </div>
             </section>
          </div>
-         <div animation-mob-steps="3" animation-step="0" data-anchor="services-desc" class="mb-8 fade-in">
+         <div animation-mob-steps="3" animation-step="0" data-anchor="services-desc" class="mb-4 fade-in">
              <section class="services-desc">
                  <div class="services-desc__scroll">
                      <div class="services-desc__wrapper">
@@ -455,7 +457,7 @@
                                  <div class="services-desc__col">
                                      <div class="services-desc__img-wrapper">
                                          <div class="services-desc__img-animation">
-                                            <img src="../assets/images/service5.png" alt="">
+                                            <img class="scale-into-view" src="../assets/images/service5.png" alt="">
                                          </div>
                                      </div>
                                      <div class="services-desc__text">
@@ -481,10 +483,10 @@
                                         </div>
                                      </div>
                                  </div>
-                                 <div class="services-desc__col">
+                                 <div class="services-desc__col pb-8">
                                      <div class="services-desc__img-wrapper">
                                          <div class="services-desc__img-animation">
-                                            <img src="../assets/images/service6.png" alt="">
+                                            <img class="scale-into-view" src="../assets/images/service6.png" alt="">
                                          </div>
                                      </div>
                                      <div class="services-desc__text">
@@ -526,7 +528,7 @@
                                  </div>
                              </div>
                          </div>
-                         <div class="services-desc__gray-line"><div class="gray-line"></div></div>
+                         <div class="services-desc__gray-line"><div class="gray-line dark"></div></div>
                      </div>
                  </div>
              </section>
@@ -593,12 +595,12 @@
                                              </div>
                                              <div class="specialists-swiper__text">
                                                  <div class="specialists-swiper__text-animation">
-                                                     <div class="specialists-swiper__name">Алек1 Петров</div>
-                                                     <div class="specialists-swiper__desc">3D asd Visualization Designer</div>
+                                                     <div class="specialists-swiper__name slide-down-in-view">Алек1 Петров</div>
+                                                     <div class="specialists-swiper__desc slide-up-in-view">3D asd Visualization Designer</div>
                                                  </div>
                                              </div>
                                              <div class="specialists-swiper__img">
-                                                 <img src="../assets/images/spes1.png" alt="">
+                                                 <img class="scale-into-view" src="../assets/images/spes1.png" alt="">
                                              </div>
                                          </div>
                                      </div>
