--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -6,9 +6,9 @@
     <title>MART</title>
     <link rel="stylesheet" href="../assets/css/fonts.css">
     <link rel="stylesheet" href="../assets/css/set.css">
-    <link rel="stylesheet" href="../assets/scss/style.css">
-    <link rel="stylesheet" href="../assets/scss/animations.css">
-    <link rel="stylesheet" href="../assets/scss/mobile.css">
+    <link rel="stylesheet" href="../assets/scss/style1.css">
+    <link rel="stylesheet" href="../assets/scss/animations1.css">
+    <link rel="stylesheet" href="../assets/scss/mobile1.css">
     <link rel="stylesheet" href="../assets/css/swiper.css">
 </head>
 <body class="isLoading">
@@ -1281,7 +1281,7 @@
      <script src="../assets/js/jquery.min.js"></script>
  <script src="../assets/js/pageable.js"></script>
  <script src="../assets/js/swiper.js"></script>
- <script src="../assets/js/main.js"></script>
+ <script src="../assets/js/main1.js"></script>
      <script src="../assets/js/scrollreveal.js"></script>
 </body>
 </html>
