--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -6,9 +6,9 @@
     <title>MART</title>
     <link rel="stylesheet" href="../assets/css/fonts.css">
     <link rel="stylesheet" href="../assets/css/set.css">
-    <link rel="stylesheet" href="../assets/scss/style1.css">
+    <link rel="stylesheet" href="../assets/scss/style2.css">
     <link rel="stylesheet" href="../assets/scss/animations1.css">
-    <link rel="stylesheet" href="../assets/scss/mobile1.css">
+    <link rel="stylesheet" href="../assets/scss/mobile2.css">
     <link rel="stylesheet" href="../assets/css/swiper.css">
 </head>
 <body class="isLoading">
@@ -67,7 +67,7 @@
          </div>
      </div>
      <div id="container">
-         <div data-anchor="custom-design" class="mb-8 white-header fade-in">
+         <div data-anchor="custom-design" class="mb-8 vh-100 white-header fade-in">
              <section class="main-view">
                  <div class="section-bg">
                      <img src="../assets/images/069_DSCF4268-HDR.png" alt="">
@@ -118,7 +118,7 @@
          </div>
          <div animation-steps="2" animation-mob-steps="2" animation-step="0" white-header-steps="1" data-anchor="projects" class="mb-8 projects-section">
              <section class="projects">
-                 <div class="projects-top">
+                 <div class="projects-top black-header">
                      <div class="projects-top__content">
                          <div class="animation-slide-down__container">
                              <div class="projects-top__title  slide-down-in-view duration-1">
@@ -165,7 +165,7 @@
                          </div>
                      </div>
                  </div>
-                 <div class="projects-swiper-box fade-in">
+                 <div class="projects-swiper-box white-header">
                      <div class="swiper projects-swiper ">
                          <div class="swiper-wrapper">
                              <div class="swiper-slide">
@@ -725,8 +725,8 @@
                      </div>
                  </div>
                  <div class="premium__video">
-                     <video id="premium-video" muted="" loop="true" poster="https://mart.rddevtest.ru/upload/iblock/107/kffpi3f8ql7o4lvdg0yq0xorpefryqzl.webp">
-                         <source src="https://mart.rddevtest.ru/upload/iblock/a8f/151034gv8zr9983afjvmsk26yhgorbar.mp4" type="video/mp4">
+                     <video id="premium-video" muted="" loop="true" poster="../assets/images/mart_video/vlcsnap-2025-04-28-19h28m31s677.webp">
+                         <source src="../assets/images/mart_video/OUT_0428.mp4" type="video/mp4">
                      </video>
                  </div>
              </section>
@@ -1281,7 +1281,7 @@
      <script src="../assets/js/jquery.min.js"></script>
  <script src="../assets/js/pageable.js"></script>
  <script src="../assets/js/swiper.js"></script>
- <script src="../assets/js/main1.js"></script>
+ <script src="../assets/js/main2.js"></script>
      <script src="../assets/js/scrollreveal.js"></script>
 </body>
 </html>
