--- a/src/pages/contacts.html
+++ b/src/pages/contacts.html
@@ -68,8 +68,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="holder" class="holder"></div>
-    <div animation-mob-steps="2" animation-steps="2" animation-step="-1" white-header-steps="1,0,-1" data-anchor="contacts-page" class="contacts white-header animation-state-0">
+    <div class="contacts">
         <section class="contacts-page">
             <div class="contacts-page__top">
                 <div class="about-section__content">
@@ -85,28 +84,28 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="animation-button-height animation-delay-1">
+                        <div class="animation-button-height animation-height animation-delay-1">
                             <div class="round-button"></div>
                         </div>
                     </div>
                     <div class="about-section__title">
-                        <div class="animation-slide-down__container">
-                            <div class="animation-slide-down duration-1 animation-delay-1">
+                        <div class="slide-down-in-view__container">
+                            <div class="slide-down-in-view duration-1 animation-delay-1">
                                 контакты
                             </div>
                         </div>
                     </div>
                     <div class="about-section__gray-line"></div>
                     <div class="about-section__text">
-                        <div class="animation-slide-up__container">
-                            <div class="animation-slide-up duration-1 animation-delay-1">
+                        <div class="slide-up-in-view__container">
+                            <div class="slide-up-in-view duration-1 animation-delay-1">
                                 Наш офис можно посетить в удобное для вас время<br>
                                 по предварительному звонку
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="contacts-page__bg">
+                <div class="contacts-page__bg white-header">
                     <div class="contacts-page__bg-animation">
                         <img src="../assets/images/contacts.png" alt="">
                     </div>
@@ -114,14 +113,14 @@
             </div>
             <div class="contacts-page__content">
                 <div class="contacts-page__content-col">
-                    <div class="contacts-page__content-item">
+                    <div class="contacts-page__content-item scale-into-view">
                         <div class="contacts-page__content-item-animation">
                             <div class="contacts-page__content-label">наш офис</div>
                             <div class="contacts-page__content-value">Санкт-петербург</div>
                             <div class="contacts-page__content-text">Набережная Мартынова, 62</div>
                         </div>
                     </div>
-                    <div class="contacts-page__content-item">
+                    <div class="contacts-page__content-item scale-into-view">
                         <div class="contacts-page__content-item-animation">
                             <div class="contacts-page__content-label">режим работы</div>
                             <div class="contacts-page__content-value">пн-пт</div>
@@ -130,7 +129,7 @@
                     </div>
                 </div>
                 <div class="contacts-page__content-col">
-                    <div class="contacts-page__content-item">
+                    <div class="contacts-page__content-item scale-into-view">
                         <div class="contacts-page__content-item-animation">
                             <div class="contacts-page__content-label">телефон</div>
                             <div class="contacts-page__content-value">8 963 77 9999 2</div>
@@ -139,7 +138,7 @@
                     </div>
                 </div>
                 <div class="contacts-page__content-col">
-                    <div class="contacts-page__content-item">
+                    <div class="contacts-page__content-item scale-into-view">
                         <div class="contacts-page__content-item-animation">
                             <div class="contacts-page__content-label">Почта</div>
                             <div class="contacts-page__content-value">HELLO@MART-DA.RU</div>
@@ -152,26 +151,26 @@
                 <div class="footer__gray-line"></div>
                 <div class="footer__container">
                     <div class="footer__left">
-                        <div class="animation-slide-up__container">
-                            <div class="animation-slide-up duration-1 animation-delay-17">
+                        <div class="slide-up-in-view__container">
+                            <div class="slide-up-in-view0 duration-1">
                                 <a href="#">Политика конфиденциальности</a>
                             </div>
                         </div>
                     </div>
                     <div class="footer__middle">
-                        <div class="animation-slide-up__container">
-                            <div class="animation-slide-up duration-1 animation-delay-17">
+                        <div class="slide-up-in-view__container">
+                            <div class="slide-up-in-view0 duration-1">
                                 © 2014-2025
                             </div>
                         </div>
                     </div>
                     <div class="footer__right">
-                        <div class="animation-slide-up__container">
-                            <div class="animation-slide-up duration-1 animation-delay-17">
+                        <div class="slide-up-in-view__container">
+                            <div class="slide-up-in-view duration-1 animation-delay-17">
                                 <div class="footer__right-button">
                                     <a href="#" class="primary-button">
-                                        <div class="animation-slide-up__container">
-                                            <div class="primary-button__text animation-slide-up duration-1 animation-delay-1">
+                                        <div class="slide-up-in-view__container">
+                                            <div class="primary-button__text slide-up-in-view duration-1 animation-delay-1">
                                                 <div class="primary-button__text-animation">заявка на обратный звонок</div>
                                             </div>
                                         </div>
@@ -180,8 +179,8 @@
                                                 <div class="primary-button__circle"></div>
                                             </div>
                                         </div>
-                                        <div class="animation-slide-up__container">
-                                            <div class="primary-button__arrow animation-slide-up duration-1  animation-delay-1">
+                                        <div class="slide-up-in-view__container">
+                                            <div class="primary-button__arrow slide-up-in-view duration-1  animation-delay-1">
                                                 <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                                     <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -197,11 +196,11 @@
             </div>
         </section>
     </div>
-    <div data-anchor="holder" class="holder"></div>
 </div>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/pageable.js"></script>
 <script src="../assets/js/swiper.js"></script>
-<script src="../assets/js/main.js"></script>
+<script src="../assets/js/main2.js"></script>
+<script src="../assets/js/scrollreveal.js"></script>
 </body>
 </html>
